--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,17 @@ services:
       - ./data:/data
     command: server /data --console-address ":9001"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 30s
       timeout: 20s
       retries: 3
+
+  spark:
+    image: bitnami/spark:3.5
+    container_name: spark
+    environment:
+      - SPARK_MODE=master
+    volumes:
+      - ./:/app
+    depends_on:
+      - minio
