--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,42 @@ services:
     depends_on:
       - minio
     command: /bin/bash -c "while true; do sleep 30; done;"
+
+  postgres:
+    image: postgres:13
+    container_name: postgres
+    environment:
+      POSTGRES_USER: hive
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: metastore
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  hive-metastore:
+    image: apache/hive:3.1.3
+    container_name: hive-metastore
+    environment:
+      SERVICE_NAME: metastore
+      DB_DRIVER: postgres
+    ports:
+      - "9083:9083"
+    depends_on:
+      - postgres
+    command: /opt/hive/bin/hive --service metastore
+
+  trino:
+    image: trinodb/trino:latest
+    container_name: trino
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./trino-config/catalog:/etc/trino/catalog
+    depends_on:
+      - hive-metastore
+      - minio
+
+volumes:
+  data:
+  postgres-data:
