--- a/trino-config/catalog/iceberg.properties
+++ b/trino-config/catalog/iceberg.properties
@@ -1,6 +1,7 @@
 connector.name=iceberg
 hive.metastore.uri=thrift://hive-metastore:9083
-s3.endpoint=http://minio:9000
-s3.path-style-access=true
-s3.aws-access-key=minioadmin
-s3.aws-secret-key=minioadmin
+fs.native-s3.enabled=true
+fs.native-s3.endpoint=http://minio:9000
+fs.native-s3.path-style-access=true
+fs.native-s3.access-key=minioadmin
+fs.native-s3.secret-key=minioadmin
