--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,11 @@ services:
       - ./hive-config/hive-site.xml:/opt/hive/conf/hive-site.xml
     depends_on:
       - postgres
-    command: /opt/hive/bin/hive --service metastore
+    command: >
+      /bin/sh -c "
+        curl -L https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar -o /opt/hive/lib/hadoop-aws-3.3.4.jar &&
+        curl -L https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar -o /opt/hive/lib/aws-java-sdk-bundle-1.12.262.jar &&
+        /opt/hive/bin/hive --service metastore"
 
   trino:
     image: trinodb/trino:latest
