--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       /bin/sh -c "
         curl -L https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar -o /opt/hive/lib/hadoop-aws-3.3.4.jar &&
         curl -L https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar -o /opt/hive/lib/aws-java-sdk-bundle-1.12.262.jar &&
+        (/opt/hive/bin/schematool -dbType postgres -initSchema || true) &&
         /opt/hive/bin/hive --service metastore"
 
   trino:
