--- a/hive_trino_setup/trino/etc/catalog/hive.properties
+++ b/hive_trino_setup/trino/etc/catalog/hive.properties
@@ -5,4 +5,5 @@ s3.aws-access-key=minioadmin
 s3.aws-secret-key=minioadmin
 s3.endpoint=http://minio:9000
 s3.path-style-access=true
+s3.region=us-east-1
 
