--- a/hive_trino_setup/docker-compose.yml
+++ b/hive_trino_setup/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=minioadmin
       - AWS_REGION=us-east-1
     entrypoint: >
-      /bin/sh -c " until (/usr/bin/mc alias set minio http://minio:9000 minioadmin minioadmin) do echo '...waiting...' && sleep 1; done; /usr/bin/mc rm -r --force minio/warehouse; /usr/bin/mc mb minio/warehouse; /usr/bin/mc policy set public minio/warehouse; tail -f /dev/null "
+      /bin/sh -c " until (/usr/bin/mc alias set minio http://minio:9000 minioadmin minioadmin) do echo '...waiting...' && sleep 1; done; /usr/bin/mc mb --ignore-existing minio/warehouse; /usr/bin/mc mb --ignore-existing minio/datalake; /usr/bin/mc policy set public minio/warehouse; /usr/bin/mc policy set public minio/datalake; tail -f /dev/null "
 
 volumes:
   hive-metastore-postgresql:
